# DG1

./: .env.example  .env.local  .gitignore  .instructions.md  ARCHITECTURE_DIAGRAMS.md  Attribute Details - V2.xlsx  Data_Governance.docx  README.md  TO_DO  jwt_private.pem  jwt_public.pem  pyproject.toml  ~$Attribute Details - V2.xlsx
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: auth.py  health.py  risks.py  users.py
app/core/: audit_sink.py  config.py  database.py  logging.py  security.py
app/middleware/: audit.py
app/models/: __init__.py  risk.py  role.py  user.py
app/schemas/: auth.py  health.py  risk.py  user.py
app/services/: auth_service.py  risk_service.py  user_service.py
schema/: 00_extensions_and_types.sql  01_admin_and_core.sql  02_risk_and_controls copy.sql  02_risk_and_controls.sql  03_assessments_and_audit.sql  04_compliance_obligations.sql  05_finance_intelligence.sql  06_document_evidence_library.sql  07_alerts_actions_reports.sql  08_training.sql  09_dynamic_columns_strategy.sql  10_rls_security_triggers.sql  11_relationships_and_views.sql  README.md
