[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dg-api"
version = "0.1.0"
description = "Data Governance FastAPI backend"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy[asyncio]>=2.0.30,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "pydantic[email]>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "passlib[argon2]>=1.7.4,<2.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "cryptography>=42.0.0,<46.0.0",
  "azure-storage-blob>=12.22.0,<13.0.0",
  "azure-identity>=1.17.0,<2.0.0",
  "structlog>=24.2.0,<25.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ruff>=0.5.0,<1.0.0",
  "mypy>=1.11.0,<2.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
